<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_operation_popupwindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/id_menu_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">
    <ImageView
        android:id="@+id/id_close_menu"
        android:layout_width="@dimen/len_32"
        android:layout_height="@dimen/len_32"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/len_8"
        android:scaleType="center"
        android:src="@drawable/ic_close_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_128"
        android:layout_below="@id/id_close_menu"
        android:divider="@drawable/ic_divider_line_gray"
        android:showDividers="beginning|middle"
        android:paddingLeft="@dimen/len_20"
        android:paddingRight="@dimen/len_20"
        android:orientation="vertical">
        <TextView
            android:id="@+id/id_action_sort"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_40"
            android:gravity="start|center"
            android:textSize="@dimen/font_14"
            android:text="@string/str_sort"/>
        <TextView
            android:id="@+id/id_action_new_folder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_40"
            android:gravity="start|center"
            android:textSize="@dimen/font_14"
            android:text="@string/str_new_folder"/>
        <TextView
            android:id="@+id/id_action_show_hide_folder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_40"
            android:gravity="start|center"
            android:textSize="@dimen/font_14"
            android:text="@string/str_show_hide_file"/>
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>